# Geninv_version2

./: README.md  requirements.txt
Backend/: .env.example  .gitignore  Create_table.py  Database_schema_creation.py  README.md  add_items.py  data_analyst agent.py  main.py  pyproject.toml
Backend/api/: router.py
Backend/api/v1/: auth.py  health.py  users.py
Backend/core/: auth.py  database.py  di_container.py  environment.py  exceptions.py  lifespan.py  logger.py  utils.py
Backend/migrations/: README  env.py
Backend/migrations/versions/: 10140c6257dc_create_database_tables.py  cfe0de6049c8_add_fk_constraint_on_users_and_.py
Backend/model/dao/: __init__.py  base.py  dynamic_table.py  enums.py  users.py
Backend/model/dto/: auth.py  base.py  dynamic_table.py  users.py
Backend/service/: auth.py  users.py
frontend/components/: ContextSwitcher.js  DynamicTable.js  InventoryTable.js  LLMEntryForm.js
frontend/pages/: index.js  login.js  register.js
frontend/services/: api.js  auth.js
frontend/utils/: roles.js
