[tool.poetry]
name = "geninv"
version = "0.1.0"
description = "Generative Inventory Service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = "^0.116.1"
alembic = "^1.16.5"
sqlmodel = "^0.0.24"
asyncpg = "^0.30.0"
pydantic-settings = "^2.10.1"
langgraph = "^0.6.7"
langchain = "^0.3.27"
langchain-openai = "^0.3.32"
dependency-injector = "^4.48.1"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.11.7"}
greenlet = "^3.2.4"
uvicorn = "^0.35.0"
pyjwt = "^2.10.1"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
